@@ -1,5 +1,6 @@
 package org.rubyforge.debugcommons;
 
+import java.io.File;
 import org.rubyforge.debugcommons.model.IRubyBreakpoint;
 
 public class RubyDebuggerFactoryTest extends DebuggerTestBase {
@@ -32,8 +33,28 @@ public class RubyDebuggerFactoryTest extends DebuggerTestBase {
         for (RubyDebuggerProxy.DebuggerType debuggerType : RubyDebuggerProxy.DebuggerType.values()) {
             setDebuggerType(debuggerType);
             String[] args = { "--used-languages", "Ruby and Java" };
-            final RubyDebuggerProxy proxy = prepareProxyWithArguments(args,
+            final RubyDebuggerProxy proxy = prepareProxy(args,
                     "exit 1 if ARGV.size != 2",
+                    "puts 'OK'");
+            final IRubyBreakpoint[] breakpoints = new IRubyBreakpoint[] {
+                new TestBreakpoint("test.rb", 2),
+            };
+            startDebugging(proxy, breakpoints, 1);
+            waitForEvents(proxy, 1, new Runnable() { // finish spawned thread
+                public void run() {
+                    proxy.getDebugTarged().getThreadById(1).resume();
+                }
+            });
+        }
+    }
+    
+    public void testBaseDir() throws Exception {
+        File baseDir = new File(getWorkDir(), "aaa");
+        assertTrue("base directory created", baseDir.mkdir());
+        for (RubyDebuggerProxy.DebuggerType debuggerType : RubyDebuggerProxy.DebuggerType.values()) {
+            setDebuggerType(debuggerType);
+            final RubyDebuggerProxy proxy = prepareProxy(baseDir,
+                    "exit 1 if Dir.pwd[-3, 3] != 'aaa'",
                     "puts 'OK'");
             final IRubyBreakpoint[] breakpoints = new IRubyBreakpoint[] {
                 new TestBreakpoint("test.rb", 2),
