@@ -2,6 +2,7 @@
 -------------
 
 	* migrating to ruby-debug-ide
+	* ability to pass base directory (needed e.g. for Rails debugging)
 
 0.7.0 - 0.7.1
 -------------
